--- a/Tienda_pais/AFC/inex_sin.html
+++ b/Tienda_pais/AFC/inex_sin.html
@@ -13,6 +13,25 @@
             src="../../Images/AFC/ASIA/Country_page/Singapur.png"
             width="100%"
         >
+        <div class="menu">
+            <div class="carrito-logo">
+                <img src="../../../Images/Inicio/carrito-de-compras.png" id="carrito">
+                <span>0</span>
+            </div>
+            
+            <table id="carrito-list" class="carrito-list">
+                <thead>
+                    <tr>
+                        <th>Logo</th>
+                        <th>League</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+                <tfoot></tfoot>
+                <!-- <a href="#" class="vaciar-carrito">Delete all</a> -->
+            </table>
+        </div>
     </header>
     <main>
         <section id="tienda">
@@ -37,5 +56,6 @@
     <footer>
         
     </footer>
+    <script src="../../Script/Carrito.js"></script>
 </body>
 </html>
