--- a/Tienda_pais/Conmebol/inex_arg.html
+++ b/Tienda_pais/Conmebol/inex_arg.html
@@ -36,6 +36,7 @@
                     </tr>
                 </thead>
                 <tbody></tbody>
+<tfoot></tfoot>
                 <!-- <a href="#" class="vaciar-carrito">Delete all</a> -->
             </table>
         </div>
@@ -71,7 +72,7 @@
                     </div>
                     <div>
                         <div class="container">
-                            <a href="">
+                            <a href="Argentina/Copa.html">
                                 <img 
                                     src="../../Images/Store/DB/ARG/COPA ARGENTINA/PREVIEW.png"
                                     class="PREVIEW"
@@ -82,7 +83,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="Argentina/Supercopa.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/ARG/SUPERCOPA ARGENTINA/PREVIEW.png"
