--- a/Tienda_pais/Conmebol/inex_bra.html
+++ b/Tienda_pais/Conmebol/inex_bra.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brazil</title>
     <link rel="stylesheet" href="../../Styles/Tienda_pais/Conmebol/Style_arg.css">
+    <link rel="stylesheet" href="../../Styles/Carrito.css">
 </head>
 <body>
     <header>
@@ -13,13 +14,32 @@
             src="../../Images/Conmebol/Conmebol/Country_page/Brasil.png"
             width="100%"
         >
+        <div class="menu">
+            <div class="carrito-logo">
+                <img src="../../../Images/Inicio/carrito-de-compras.png" id="carrito">
+                <span>0</span>
+            </div>
+            
+            <table id="carrito-list" class="carrito-list">
+                <thead>
+                    <tr>
+                        <th>Logo</th>
+                        <th>League</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+<tfoot></tfoot>
+                <!-- <a href="#" class="vaciar-carrito">Delete all</a> -->
+            </table>
+        </div>
     </header>
     <main>
         <section id="tienda">
             <div>
                 <div>
                     <div>
-                        <a href="">
+                        <a href="Brasil/Brasileirao.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/BRA/BRASILEIRAO A/PREVIEW.png" 
@@ -31,7 +51,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="Brasil/SerieC.html">
                             <div class="container">
                                 <img
                                     src="../../Images/Store/DB/BRA/SERIE C/PREVIEW.png"
@@ -43,7 +63,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="Brasil/SerieD.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/BRA/SERIE D/PREVIEW.png"
@@ -55,7 +75,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="Brasil/Carioca.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/BRA/CARIOCA/PREVIEW.png"
@@ -68,7 +88,7 @@
                             <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="Brasil/Caze.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/BRA/CAZE/PREVIEW.png"
@@ -80,7 +100,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="Brasil/Copa.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/BRA/COPA DO BRASIL/PREVIEW.png"
@@ -92,7 +112,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="Brasil/CopaNrd.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/BRA/COPA DO NORDESTE/PREVIEW.png"
@@ -104,7 +124,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="Brasil/Supercopa.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/BRA/SUPERCOPA DO BRASIL/PREVIEW.png"
@@ -118,6 +138,7 @@
                 </div>
             </div>
         </section>
+        <script src="../../Script/Carrito.js"></script>
     </main>
     <footer>
         
