--- a/test.html
+++ b/test.html
@@ -23,6 +23,7 @@
                     </tr>
                 </thead>
                 <tbody></tbody>
+<tfoot></tfoot>
             </table>
         </div>
 </body>
