--- a/Tienda_pais/AFC/inex_indi.html
+++ b/Tienda_pais/AFC/inex_indi.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>India</title>
     <link rel="stylesheet" href="../../Styles/Tienda_pais/Conmebol/Style_arg.css">
+    <link rel="stylesheet" href="../../Styles/Carrito.css">
 </head>
 <body>
     <header>
@@ -13,13 +14,32 @@
             src="../../Images/AFC/ASIA/Country_page/India.png"
             width="100%"
         >
+        <div class="menu">
+            <div class="carrito-logo">
+                <img src="../../../Images/Inicio/carrito-de-compras.png" id="carrito">
+                <span>0</span>
+            </div>
+            
+            <table id="carrito-list" class="carrito-list">
+                <thead>
+                    <tr>
+                        <th>Logo</th>
+                        <th>League</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+<tfoot></tfoot>
+                <!-- <a href="#" class="vaciar-carrito">Delete all</a> -->
+            </table>
+        </div>
     </header>
     <main>
         <section id="tienda">
             <div>
                 <div>
                     <div>
-                        <a href="">
+                        <a href="India/ISL.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/INDIA/ISL/PREVIEW.png" 
@@ -27,8 +47,8 @@
                                 >
                                 <div class="color-overlay"></div>
                             </div>
-                        <div class="titulo">Scoreboard ISL League</div></a>
-                        <div class="precio">$20</div>
+                        <div class="titulo">Indian Super League</div></a>
+                        <div class="precio">$12</div>
                     </div>
                 </div>
             </div>
@@ -37,5 +57,6 @@
     <footer>
         
     </footer>
+    <script src="../../Script/Carrito.js"></script>
 </body>
 </html>
