--- a/Tienda_pais/AFC/inex_indo.html
+++ b/Tienda_pais/AFC/inex_indo.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Indonesia</title>
     <link rel="stylesheet" href="../../Styles/Tienda_pais/Conmebol/Style_arg.css">
+    <link rel="stylesheet" href="../../Styles/Carrito.css">
 </head>
 <body>
     <header>
@@ -13,21 +14,42 @@
             src="../../Images/AFC/ASIA/Country_page/Indonesia.png"
             width="100%"
         >
+        <div class="menu">
+            <div class="carrito-logo">
+                <img src="../../../Images/Inicio/carrito-de-compras.png" id="carrito">
+                <span>0</span>
+            </div>
+            
+            <table id="carrito-list" class="carrito-list">
+                <thead>
+                    <tr>
+                        <th>Logo</th>
+                        <th>League</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+                <tfoot></tfoot>
+                <!-- <a href="#" class="vaciar-carrito">Delete all</a> -->
+            </table>
+        </div>
     </header>
     <main>
         <section id="tienda">
             <div>
                 <div>
                     <div>
-                        <div class="container">
+                        <a href="Indonesia/IndSL.html">
+                            <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/INDONESIA/LIGA/PREVIEW.png" 
                                     class="PREVIEW"
                                 >
                                 <div class="color-overlay"></div>
                             </div>
-                        <div class="titulo">Scoreboard Indonesian League</div></a>
+                        <div class="titulo">Indonesian Super League</div></a>
                         <div class="precio">$20</div>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -36,5 +58,6 @@
     <footer>
         
     </footer>
+    <script src="../../Script/Carrito.js"></script>
 </body>
 </html>
