--- a/Tienda_pais/CAF/inex_egy.html
+++ b/Tienda_pais/CAF/inex_egy.html
@@ -7,6 +7,7 @@
     <title>Egypt</title>
     <link rel="shortcut icon" href="../../Images/CAF/egipto.png" type="image/x-icon">
     <link rel="stylesheet" href="../../Styles/Tienda_pais/Conmebol/Style_arg.css">
+    <link rel="stylesheet" href="../../Styles/Carrito.css">
 </head>
 <body>
     <header>
@@ -14,13 +15,32 @@
             src="../../Images/CAF/Country_page/Egipto.png"
             width="100%"
         >
+        <div class="menu">
+            <div class="carrito-logo">
+                <img src="../../../Images/Inicio/carrito-de-compras.png" id="carrito">
+                <span>0</span>
+            </div>
+            
+            <table id="carrito-list" class="carrito-list">
+                <thead>
+                    <tr>
+                        <th>Logo</th>
+                        <th>League</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+<tfoot></tfoot>
+                <!-- <a href="#" class="vaciar-carrito">Delete all</a> -->
+            </table>
+        </div>
     </header>
     <main>
         <section id="tienda">
             <div>
                 <div>
                     <div>
-                        <a href="">
+                        <a href="Egypt/EPL.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/EGIPTO/LIGA/PREVIEW.png" 
@@ -28,7 +48,7 @@
                                 >
                                 <div class="color-overlay"></div>
                             </div>
-                        <div class="titulo">Scoreboard Egyptian Premier League</div></a>
+                        <div class="titulo">Egyptian Premier League</div></a>
                         <div class="precio">$20</div>
                     </div>
                 </div>
@@ -38,5 +58,6 @@
     <footer>
         
     </footer>
+    <script src="../../Script/Carrito.js"></script>
 </body>
 </html>
