--- a/Tienda_pais/Conmebol/Argentina/LPF.html
+++ b/Tienda_pais/Conmebol/Argentina/LPF.html
@@ -33,6 +33,7 @@
                     </tr>
                 </thead>
                 <tbody></tbody>
+<tfoot></tfoot>
                 <!-- <a href="#" class="vaciar-carrito">Delete all</a> -->
             </table>
         </div>
@@ -55,7 +56,7 @@
                             <img src="../../../Images/Logos_competencia/LPF.png" class="competencia">
                         </div>
                         <div class="precio">
-                            <h3>Prize: <span>$20</span></h3>
+                            <h3>Prize: $<span>20</span></h3>
                         </div>
                         <input type="button" value="Add to cest" id="btnAdd" class="btnAdd">
                         <div class="minilogos">
