--- a/Tienda_pais/Conmebol/inex_bol.html
+++ b/Tienda_pais/Conmebol/inex_bol.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bolivia</title>
     <link rel="stylesheet" href="../../Styles/Tienda_pais/Conmebol/Style_arg.css">
+    <link rel="stylesheet" href="../../Styles/Carrito.css">
 </head>
 <body>
     <header>
@@ -13,6 +14,25 @@
             src="../../Images/Conmebol/Conmebol/Country_page/Bolivia.png"
             width="100%"
         >
+        <div class="menu">
+            <div class="carrito-logo">
+                <img src="../../../Images/Inicio/carrito-de-compras.png" id="carrito">
+                <span>0</span>
+            </div>
+            
+            <table id="carrito-list" class="carrito-list">
+                <thead>
+                    <tr>
+                        <th>Logo</th>
+                        <th>League</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+<tfoot></tfoot>
+                <!-- <a href="#" class="vaciar-carrito">Delete all</a> -->
+            </table>
+        </div>
     </header>
     <main>
         <section id="tienda">
@@ -20,7 +40,7 @@
                 <div>
                     <div>
                         <div class="container">
-                            <a href="">
+                            <a href="Bolivia/Liga.html">
                                 <img 
                                     src="../../Images/Store/DB/BOL/COPA TIGO/PREVIEW.png" 
                                     class="PREVIEW"
@@ -33,6 +53,7 @@
                 </div>
             </div>
         </section>
+        <script src="../../Script/Carrito.js"></script>
     </main>
     <footer>
         
