--- a/Tienda_pais/UEFA/inex_au.html
+++ b/Tienda_pais/UEFA/inex_au.html
@@ -7,6 +7,7 @@
     <title>Austria</title>
     <link rel="shortcut icon" href="../../Images/UEFA/Uefa/Austria.png" type="image/x-icon">
     <link rel="stylesheet" href="../../Styles/Tienda_pais/Conmebol/Style_arg.css">
+    <link rel="stylesheet" href="../../Styles/Carrito.css">
 </head>
 <body>
     <header>
@@ -14,6 +15,25 @@
             src="../../Images/UEFA/Uefa/Country_page/Austria.png"
             width="100%"
         >
+        <div class="menu">
+            <div class="carrito-logo">
+                <img src="../../../Images/Inicio/carrito-de-compras.png" id="carrito">
+                <span>0</span>
+            </div>
+            
+            <table id="carrito-list" class="carrito-list">
+                <thead>
+                    <tr>
+                        <th>Logo</th>
+                        <th>League</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+                <tfoot></tfoot>
+                <!-- <a href="#" class="vaciar-carrito">Delete all</a> -->
+            </table>
+        </div>
     </header>
     <main>
         <section id="tienda">
@@ -28,7 +48,7 @@
                             >
                             <div class="color-overlay"></div>
                         </div>
-                        <div class="titulo">Scoreboard Ö Bundesliga</div></a>
+                        <div class="titulo">Ö Bundesliga</div></a>
                         <div class="precio">$20</div>
                     </div>
                     <div>
