--- a/Tienda_pais/UEFA/inex_bel.html
+++ b/Tienda_pais/UEFA/inex_bel.html
@@ -20,7 +20,7 @@
             <div>
                 <div>
                     <div>
-                        <a href="">
+                        <a href="Belgica/1A_Pro.html">
                         <div class="container">
                             <img 
                                 src="../../Images/Store/DB/BELGICA/1A LEAGUE/PREVIEW.png" 
@@ -28,11 +28,11 @@
                             >
                             <div class="color-overlay"></div>
                         </div>
-                        <div class="titulo">Scoreboard 1A League</div></a>
+                        <div class="titulo">1A League</div></a>
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="Belgica/Croky.html">
                             <div class="container">
                                 <img
                                     src="../../Images/Store/DB/BELGICA/CROKY CUP/PREVIEW.png"
@@ -40,7 +40,7 @@
                                 >
                                 <div class="color-overlay"></div>
                         </div>
-                        <div class="titulo">Scoreboard Croky Cup</div></a>
+                        <div class="titulo">Croky Cup</div></a>
                         <div class="precio">$20</div>
                     </div>
                 </div>
