--- a/Tienda_pais/UEFA/Irlanda/League.html
+++ b/Tienda_pais/UEFA/Irlanda/League.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Croky Cup</title>
+    <title>Ireland League</title>
+
     <link rel="stylesheet" href="../../../Styles/Style_prod.css">
     <link rel="stylesheet" href="../../../Styles/Carrito.css">
 </head>
@@ -45,18 +46,18 @@
                 <div>
                     <div id="imgDiv">
                         <img 
-                            src="../../../Images/Store/DB/BELGICA/CROKY CUP/PREVIEW.png" 
+                            src="../../../Images/Store/DB/IRLANDA/SSE/PREVIEW.png" 
                             class="img"
                         >
-                        <p>Scoreboard from Croky Cup, the national cup of Belgium</p>
+                        <p>Scoreboard from Ireland League, the first league of Ireland</p>
                     </div>
                     <div class="textos">
                         <div class="Titulo">
-                            <h1>Croky Cup</h1>
-                            <img src="../../../Images/Logos_competencia/CrokyCup.png" class="competencia">
+                            <h1>Ireland League</h1>
+                            <img src="../../../Images/Logos_competencia/LOI.png" class="competencia">
                         </div>
                         <div class="precio">
-                            <h3>Price: $<span>13</span></h3>
+                            <h3>Price: $<span>14</span></h3>
                         </div>
                         <input type="button" value="Add to cest" id="btnAdd" class="btnAdd">
                         <div class="minilogos">
