--- a/Tienda_pais/UEFA/inex_eng.html
+++ b/Tienda_pais/UEFA/inex_eng.html
@@ -7,6 +7,7 @@
     <title>England</title>
     <link rel="shortcut icon" href="../../Images/UEFA/Uefa/Inglaterra.png" type="image/x-icon">
     <link rel="stylesheet" href="../../Styles/Tienda_pais/Conmebol/Style_arg.css">
+    <link rel="stylesheet" href="../../Styles/Carrito.css">
 </head>
 <body>
     <header>
@@ -14,13 +15,32 @@
             src="../../Images/UEFA/Uefa/Country_page/Inglaterra.png"
             width="100%"
         >
+        <div class="menu">
+            <div class="carrito-logo">
+                <img src="../../../Images/Inicio/carrito-de-compras.png" id="carrito">
+                <span>0</span>
+            </div>
+            
+            <table id="carrito-list" class="carrito-list">
+                <thead>
+                    <tr>
+                        <th>Logo</th>
+                        <th>League</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+                <tfoot></tfoot>
+                <!-- <a href="#" class="vaciar-carrito">Delete all</a> -->
+            </table>
+        </div>
     </header>
     <main>
         <section id="tienda">
             <div>
                 <div>
                     <div>
-                        <a href="">
+                        <a href="England/EFL.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/INGLATERRA/EFL/PREVIEW.png" 
@@ -32,7 +52,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="England/Carabao.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/INGLATERRA/CARABAO/PREVIEW.png" 
@@ -44,7 +64,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="England/FA.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/INGLATERRA/FA CUP/PREVIEW.png" 
@@ -56,7 +76,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="England/Community.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/INGLATERRA/COMMUNITY SHIELD/PREVIEW.png" 
@@ -74,5 +94,6 @@
     <footer>
         
     </footer>
+    <script src="../../Script/Carrito.js"></script>
 </body>
 </html>
