--- a/Tienda_pais/UEFA/inex_ger.html
+++ b/Tienda_pais/UEFA/inex_ger.html
@@ -7,6 +7,7 @@
     <title>Germany</title>
     <link rel="shortcut icon" href="../../Images/UEFA/Uefa/Alemania.png" type="image/x-icon">
     <link rel="stylesheet" href="../../Styles/Tienda_pais/Conmebol/Style_arg.css">
+    <link rel="stylesheet" href="../../Styles/Carrito.css">
 </head>
 <body>
     <header>
@@ -14,13 +15,32 @@
             src="../../Images/UEFA/Uefa/Country_page/Alemania.png"
             width="100%"
         >
+        <div class="menu">
+            <div class="carrito-logo">
+                <img src="../../../Images/Inicio/carrito-de-compras.png" id="carrito">
+                <span>0</span>
+            </div>
+            
+            <table id="carrito-list" class="carrito-list">
+                <thead>
+                    <tr>
+                        <th>Logo</th>
+                        <th>League</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+                <tfoot></tfoot>
+                <!-- <a href="#" class="vaciar-carrito">Delete all</a> -->
+            </table>
+        </div>
     </header>
     <main>
         <section id="tienda">
             <div>
                 <div>
                     <div>
-                        <a href="">
+                        <a href="Alemania/3Liga.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/ALEMANIA/3. LIGA/PREVIEW.png" 
@@ -32,7 +52,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="Alemania/Regio.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/ALEMANIA/REG/PREVIEW.png" 
@@ -44,7 +64,7 @@
                             <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="Alemania/DFB.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/ALEMANIA/DFB-POKAL/PREVIEW.png" 
@@ -62,5 +82,6 @@
     <footer>
         
     </footer>
+    <script src="../../Script/Carrito.js"></script>
 </body>
 </html>
