--- a/Tienda_pais/UEFA/inex_neth.html
+++ b/Tienda_pais/UEFA/inex_neth.html
@@ -20,7 +20,7 @@
             <div>
                 <div>
                     <div>
-                        <a href="">
+                        <a href="Holanda/Eredivise.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/NETHERLANDS/EREDIVISE/PREVIEW.png" 
@@ -32,7 +32,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="Holanda/Knvb.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/NETHERLANDS/COPA/PREVIEW.png" 
