--- a/Tienda_pais/UEFA/inex_it.html
+++ b/Tienda_pais/UEFA/inex_it.html
@@ -7,6 +7,7 @@
     <title>Italy</title>
     <link rel="shortcut icon" href="../../Images/UEFA/Uefa/Italia.png" type="image/x-icon">
     <link rel="stylesheet" href="../../Styles/Tienda_pais/Conmebol/Style_arg.css">
+    <link rel="stylesheet" href="../../Styles/Carrito.css">
 </head>
 <body>
     <header>
@@ -20,7 +21,7 @@
             <div>
                 <div>
                     <div>
-                        <a href="">
+                        <a href="Italia/Super.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/ITALIA/SERIE A/PREVIEW.png" 
@@ -32,7 +33,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="Italia/SerieB.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/ITALIA/SERIE B/PREVIEW.png" 
@@ -44,7 +45,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="Italia/Coppa.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/ITALIA/COPPA ITALIA/" 
