--- a/Tienda_pais/UEFA/inex_pol.html
+++ b/Tienda_pais/UEFA/inex_pol.html
@@ -7,6 +7,7 @@
     <title>Poland</title>
     <link rel="shortcut icon" href="../../Images/UEFA/Uefa/Polonia.png" type="image/x-icon">
     <link rel="stylesheet" href="../../Styles/Tienda_pais/Conmebol/Style_arg.css">
+    <link rel="stylesheet" href="../../Styles/Carrito.css">
 </head>
 <body>
     <header>
@@ -14,13 +15,32 @@
             src="../../Images/UEFA/Uefa/Country_page/Polonia.png"
             width="100%"
         >
+        <div class="menu">
+            <div class="carrito-logo">
+                <img src="../../../Images/Inicio/carrito-de-compras.png" id="carrito">
+                <span>0</span>
+            </div>
+            
+            <table id="carrito-list" class="carrito-list">
+                <thead>
+                    <tr>
+                        <th>Logo</th>
+                        <th>League</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+                <tfoot></tfoot>
+                <!-- <a href="#" class="vaciar-carrito">Delete all</a> -->
+            </table>
+        </div>
     </header>
     <main>
         <section id="tienda">
             <div>
                 <div>
                     <div>
-                        <a href="">
+                        <a href="Poland/Ekstraklasa.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/POLONIA/PKO/PREVIEW.png" 
@@ -29,10 +49,10 @@
                                 <div class="color-overlay"></div>
                             </div>
                         <div class="titulo">Scoreboard PKO Ekstraklasa</div></a>
-                        <div class="precio">$20</div>
+                        <div class="precio">$15</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="Poland/Fortuna.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/POLONIA/FORTUNA/PREVIEW.png" 
@@ -41,7 +61,7 @@
                                 <div class="color-overlay"></div>
                             </div>
                         <div class="titulo">Scoreboard Fortuna Puchar</div></a>
-                        <div class="precio">$20</div>
+                        <div class="precio">$12</div>
                     </div>
                 </div>
             </div>
@@ -50,5 +70,6 @@
     <footer>
         
     </footer>
+    <script src="../../Script/Carrito.js"></script>
 </body>
 </html>
