--- a/Fifa.html
+++ b/Fifa.html
@@ -25,70 +25,92 @@
     <section id="Fifa">
         <div>
             <div>
-                <img 
-                    src="Images/FIFA/AFC Champions league.png" 
-                    class="logoPais"
-                >
+                    <a href="Tienda_pais/FIFA/AFCCL.html">
+                    <img 
+                        src="Images/FIFA/AFC Champions league.png" 
+                        class="logoPais"
+                    >
+                </a>
             </div>
             <div>
-                <img 
-                    src="Images/FIFA/AFC QUALIFIERS.png" 
-                    class="logoPais"
-                >
+                    <a href="Tienda_pais/FIFA/AFCQ.html">
+                    <img 
+                        src="Images/FIFA/AFC QUALIFIERS.png" 
+                        class="logoPais"
+                    >
+                </a>
             </div>
             <div>
-                <img 
-                    src="Images/FIFA/CAF CL.png" 
-                    class="logoPais"
-                >
+                    <a href="Tienda_pais/FIFA/CAFCL.html">
+                    <img 
+                        src="Images/FIFA/CAF CL.png" 
+                        class="logoPais"
+                    >
+                </a>
             </div>
             <div>
-                <img 
-                    src="Images/FIFA/CAF Copa naciones.png" 
-                    class="logoPais"
-                >
+                    <a href="Tienda_pais/FIFA/CAFNC.html">
+                    <img 
+                        src="Images/FIFA/CAF Copa naciones.png" 
+                        class="logoPais"
+                    >
+                </a>
             </div>
             <div>
-                <img 
-                    src="Images/FIFA/concachampions.png" 
-                    class="logoPais"
-                >
+                    <a href="Tienda_pais/FIFA/Conca.html">
+                    <img 
+                        src="Images/FIFA/concachampions.png" 
+                        class="logoPais"
+                    >
+                </a>
             </div>
             <div>
-                <img 
-                    src="Images/FIFA/Conmebol_con_name.png" 
-                    class="logoPais"
-                >
+                    <a href="Tienda_pais/FIFA/ConmebolQ.html">
+                    <img 
+                        src="Images/FIFA/Conmebol_con_name.png" 
+                        class="logoPais"
+                    >
+                </a>
             </div>
             <div>
-                <img 
-                    src="Images/FIFA/Copa America.png" 
-                    class="logoPais"
-                >
+                <a href="Tienda_pais/FIFA/CA.html">
+                    <img 
+                        src="Images/FIFA/Copa America.png" 
+                        class="logoPais"
+                    >
+                </a>
             </div>
             <div>
-                <img 
-                    src="Images/FIFA/UEFA qualifiers.png" 
-                    class="logoPais"
-                >
+                    <a href="Tienda_pais/FIFA/EQ.html">
+                    <img 
+                        src="Images/FIFA/UEFA qualifiers.png" 
+                        class="logoPais"
+                    >
+                </a>
             </div>
             <div>
-                <img 
-                    src="Images/FIFA/OFC_con_name.png" 
-                    class="logoPais"
-                >
+                <a href="Tienda_pais/FIFA/OFCQ.html">
+                    <img 
+                        src="Images/FIFA/OFC_con_name.png" 
+                        class="logoPais"
+                    >
+                </a>
             </div>
             <div>
-                <img 
-                    src="Images/FIFA/UEFA EURO.png" 
-                    class="logoPais"
-                >
+                <a href="Tienda_pais/FIFA/EC.html">
+                    <img 
+                        src="Images/FIFA/UEFA EURO.png" 
+                        class="logoPais"
+                    >
+                </a>
             </div>
             <div>
-                <img 
-                    src="Images/FIFA/WC.png" 
-                    class="logoPais"
-                >
+                    <a href="Tienda_pais/FIFA/WC.html">
+                    <img 
+                        src="Images/FIFA/WC.png" 
+                        class="logoPais"
+                    >
+                </a>
             </div>
         </div>
     </section>
