--- a/Tienda_pais/UEFA/inex_Sco.html
+++ b/Tienda_pais/UEFA/inex_Sco.html
@@ -7,6 +7,7 @@
     <title>Scotland</title>
     <link rel="shortcut icon" href="../../Images/UEFA/Uefa/Escocia.png" type="image/x-icon">
     <link rel="stylesheet" href="../../Styles/Tienda_pais/Conmebol/Style_arg.css">
+    <link rel="stylesheet" href="../../Styles/Carrito.css">
 </head>
 <body>
     <header>
@@ -14,13 +15,32 @@
             src="../../Images/UEFA/Uefa/Country_page/Escocia.png"
             width="100%"
         >
+        <div class="menu">
+            <div class="carrito-logo">
+                <img src="../../../Images/Inicio/carrito-de-compras.png" id="carrito">
+                <span>0</span>
+            </div>
+            
+            <table id="carrito-list" class="carrito-list">
+                <thead>
+                    <tr>
+                        <th>Logo</th>
+                        <th>League</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+                <tfoot></tfoot>
+                <!-- <a href="#" class="vaciar-carrito">Delete all</a> -->
+            </table>
+        </div>
     </header>
     <main>
         <section id="tienda">
             <div>
                 <div>
                     <div>
-                        <a href="">
+                        <a href="Escocia/Premiership.html">
                         <div class="container">
                             <img 
                                 src="../../Images/Store/DB/ESCOCIA/PREMIERSHIP/PREVIEW.png" 
@@ -32,7 +52,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="Escocia/Cup.html">
                             <div class="container">
                                 <img
                                     src="../../Images/Store/DB/ESCOCIA/CUP/PREVIEW.png"
@@ -40,7 +60,7 @@
                                 >
                                 <div class="color-overlay"></div>
                         </div>
-                        <div class="titulo">Scoreboard Scottish Cup</div></a>
+                        <div class="titulo">Scoreboard Scottish FA Cup</div></a>
                         <div class="precio">$20</div>
                     </div>
                 </div>
@@ -50,5 +70,6 @@
     <footer>
         
     </footer>
+    <script src="../../Script/Carrito.js"></script>
 </body>
 </html>
