--- a/Tienda_pais/UEFA/inex_spa.html
+++ b/Tienda_pais/UEFA/inex_spa.html
@@ -7,6 +7,7 @@
     <title>Spain</title>
     <link rel="shortcut icon" href="../../Images/UEFA/Uefa/España.png" type="image/x-icon">
     <link rel="stylesheet" href="../../Styles/Tienda_pais/Conmebol/Style_arg.css">
+    <link rel="stylesheet" href="../../Styles/Carrito.css">
 </head>
 <body>
     <header>
@@ -14,13 +15,32 @@
             src="../../Images/UEFA/Uefa/Country_page/España.png"
             width="100%"
         >
+        <div class="menu">
+            <div class="carrito-logo">
+                <img src="../../../Images/Inicio/carrito-de-compras.png" id="carrito">
+                <span>0</span>
+            </div>
+            
+            <table id="carrito-list" class="carrito-list">
+                <thead>
+                    <tr>
+                        <th>Logo</th>
+                        <th>League</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+                <tfoot></tfoot>
+                <!-- <a href="#" class="vaciar-carrito">Delete all</a> -->
+            </table>
+        </div>
     </header>
     <main>
         <section id="tienda">
             <div>
                 <div>
                     <div>
-                        <a href="">
+                        <a href="España/Smartbank.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/ESPAÑA/SMARTBANK/PREVIEW.png" 
@@ -32,7 +52,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="España/RFEF.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/ESPAÑA/RFEF/PREVIEW.png" 
@@ -44,7 +64,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="España/2RFEF.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/ESPAÑA/2RFEF/PREVIEW.png" 
@@ -56,7 +76,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="España/3RFEF.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/ESPAÑA/3RFEF/PREVIEW.png" 
@@ -68,7 +88,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="España/CopaDelRey.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/ESPAÑA/COPA DEL REY/PREVIEW.png" 
@@ -80,7 +100,7 @@
                         <div class="precio">$20</div>
                     </div>
                     <div>
-                        <a href="">
+                        <a href="España/Supercopa.html">
                             <div class="container">
                                 <img 
                                     src="../../Images/Store/DB/ESPAÑA/SUPERCOPA/PREVIEW.png" 
@@ -88,7 +108,7 @@
                                 >
                                 <div class="color-overlay"></div>
                             </div>
-                        <div class="titulo">Scoreboard Supercopa Del Rey</div></a>
+                        <div class="titulo">Scoreboard Supercopa Del Rey 2023</div></a>
                         <div class="precio">$20</div>
                     </div>
                 </div>
@@ -98,5 +118,6 @@
     <footer>
         
     </footer>
+    <script src="../../Script/Carrito.js"></script>
 </body>
 </html>
