--- a/Tienda_pais/UEFA/Poland/Ekstraklasa.html
+++ b/Tienda_pais/UEFA/Poland/Ekstraklasa.html
@@ -57,7 +57,7 @@
                             <img src="../../../Images/Logos_competencia/Ekstraklasa.png" class="competencia">
                         </div>
                         <div class="precio">
-                            <h3>Prize: $<span>15</span></h3>
+                            <h3>Price: $<span>15</span></h3>
                         </div>
                         <input type="button" value="Add to cest" id="btnAdd" class="btnAdd">
                         <div class="minilogos">
