--- a/Tienda_pais/Conmebol/Argentina/Copa.html
+++ b/Tienda_pais/Conmebol/Argentina/Copa.html
@@ -56,7 +56,7 @@
                             <img src="../../../Images/Logos_competencia/CopaArgentinaAXIONenergy.png" class="competencia">
                         </div>
                         <div class="precio">
-                            <h3>Prize: $<span>17</span></h3>
+                            <h3>Price: $<span>17</span></h3>
                         </div>
                         <input type="button" value="Add to cest" id="btnAdd" class="btnAdd">
                         <div class="minilogos">
