--- a/Tienda_pais/Conmebol/Brasil/Caze.html
+++ b/Tienda_pais/Conmebol/Brasil/Caze.html
@@ -56,7 +56,7 @@
                             <img src="../../../Images/Logos_competencia/CazeTV.png" class="competencia">
                         </div>
                         <div class="precio">
-                            <h3>Prize: $<span>20</span></h3>
+                            <h3>Price: $<span>20</span></h3>
                         </div>
                         <input type="button" value="Add to cest" id="btnAdd">
                         <div class="minilogos">
