--- a/Tienda_pais/OFC/inex_aus.html
+++ b/Tienda_pais/OFC/inex_aus.html
@@ -39,7 +39,19 @@
         <div id="myModal" class="modal">
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <div id="modalContent"></div>
+                <div id="modalContent">
+                    <table id="carritoXL">
+                        <thead>
+                            <tr>
+                                <th>Logo</th>
+                                <th>League</th>
+                                <th>Price</th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                        <tfoot></tfoot>
+                    </table>
+                </div>
             </div>
         </div>
         <section id="tienda">
