--- a/Tienda_pais/UEFA/inex_spa.html
+++ b/Tienda_pais/UEFA/inex_spa.html
@@ -119,5 +119,6 @@
         
     </footer>
     <script src="../../Script/Carrito.js"></script>
+    <script src="../../Script/carritoPopup.js"></script>
 </body>
 </html>
