--- a/Tienda_pais/Conmebol/inex_bol.html
+++ b/Tienda_pais/Conmebol/inex_bol.html
@@ -7,6 +7,7 @@
     <title>Bolivia</title>
     <link rel="stylesheet" href="../../Styles/Tienda_pais/Conmebol/Style_arg.css">
     <link rel="stylesheet" href="../../Styles/Carrito.css">
+    <link rel="stylesheet" href="../../Styles/carritoPopup.css">
 </head>
 <body>
     <header>
@@ -54,6 +55,7 @@
             </div>
         </section>
         <script src="../../Script/Carrito.js"></script>
+        <script src="../../Script/carritoPopup.js"></script>
     </main>
     <footer>
         
